@startuml
package tratte {

  class Tratta {
    - stazionePartenza: Stazione
    - stazioneArrivo: Stazione
    - distanzaKm: int
    + Tratta(stazionePartenza: Stazione, stazioneArrivo: Stazione)
    - calcolaDistanza(): int
    + getStazionePartenza(): Stazione
    + getStazioneArrivo(): Stazione
    + getDistanzaKm(): int
    + toString(): String
    + equals(obj: Object): boolean
    + hashCode(): int
  }

  class TrattaFactory {
    + creaTratta(partenza: Stazione, arrivo: Stazione): Tratta
    + creaTratta(nomePartenza: String, nomeArrivo: String): Tratta
    + creaTutteLeTratte(): List<Tratta>
    + isTrattaValida(partenza: Stazione, arrivo: Stazione): boolean
    + trovaTratta(tratte: List<Tratta>, partenza: Stazione, arrivo: Stazione): Tratta
    + stampaStatistiche(): void
  }
}

' Rappresentazione semplificata della classe esterna Stazione
package stazioni{
    class Stazione <<enumeration>> {
      + getValore(): int
      + getNome(): String
      + fromNome(nome: String): Stazione
      + values(): Stazione[]
    }
}

' Relazioni
Tratta o-- Stazione : stazionePartenza, stazioneArrivo
TrattaFactory ..> Tratta : creaTratta / creaTutteLeTratte / trovaTratta
TrattaFactory ..> Stazione : creaTratta(nome…), isTrattaValida

@enduml